--- a/themes/digital.gov/src/uswds/scss/_card.scss
+++ b/themes/digital.gov/src/uswds/scss/_card.scss
@@ -73,7 +73,6 @@
 			white-space: nowrap;
 		}
 		.authors-list-short{
-			@include u-margin(0);
 			@include at-media('tablet') {
 				@include u-order('last');
 			}
